# apps/server/internal/modules/auth/auth.route.go
@@ -27,6 +27,7 @@ func NewRoute(
 func (r *Route) ConnectRoute(router *echo.Group, controller *Controller) {
 	auth := router.Group("/auth")
 	auth.POST("/register", controller.Register)
+	auth.GET("/registration-status", controller.GetPublicRegistrationStatus)
 
 	auth.POST("/login", r.bruteforceGuard.Middleware()(controller.Login))
 
